Rev V1.0003 : - Add PPOB Menu - Add PPOB ListMenu Layout Blank
Next ..
- Company Profile API
- PPOB Content
- Icon / Image Assets

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".additional.PPOBActivity"></activity>
+        <activity android:name=".ppob.RiwayatActivity"></activity>
+        <activity android:name=".ppob.GameActivity" />
+        <activity android:name=".ppob.VoucherActivity" />
+        <activity android:name=".ppob.EmoneyActivity" />
+        <activity android:name=".ppob.AngsuranActivity" />
+        <activity android:name=".ppob.BpjsActivity" />
+        <activity android:name=".ppob.PgnActivity" />
+        <activity android:name=".ppob.TvActivity" />
+        <activity android:name=".ppob.PdamActivity" />
+        <activity android:name=".ppob.InternetActivity" />
+        <activity android:name=".ppob.PulsaPascaActivity" />
+        <activity android:name=".ppob.PlnActivity" />
+        <activity android:name=".ppob.TelponActivity" />
+        <activity android:name=".ppob.TokenActivity" />
+        <activity android:name=".ppob.PulsaActivity" />
+        <activity android:name=".ppob.DataActivity" />
+        <activity android:name=".additional.PPOBActivity" />
         <activity android:name=".additional.ProfileActivity" />
         <activity android:name=".additional.TransaksiActivity" />
         <activity android:name=".additional.WithdrawActivity" />
