Rev V1.0004 : - FIX Tab Crash bcs no_anggota has duplicate id
Next ..
- Company Profile API
- PPOB Content
- Icon / Image Assets

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ppob.RiwayatActivity"></activity>
+        <activity android:name=".ppob.TransaksiPpobActivity"></activity>
+        <activity android:name=".ppob.RiwayatActivity" />
         <activity android:name=".ppob.GameActivity" />
         <activity android:name=".ppob.VoucherActivity" />
         <activity android:name=".ppob.EmoneyActivity" />
