--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     //implementation 'org.codehaus.groovy:groovy-all:2.4.15'
 
     implementation 'com.android.volley:volley:1.1.0'
+    //implementation 'com.mcxiaoke.volley:library:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.0.0-alpha04'
@@ -49,6 +50,8 @@ dependencies {
     //implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.1.0'
     //lib glide
     //implementation 'com.github.bumptech.glide:glide:4.8.0'
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
@@ -65,5 +68,4 @@ dependencies {
     //implementation'com.github.devdhar04:MaterialSpinner:v0.1.2'
     //chart
     //implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
 }
