--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,10 @@ android {
         applicationId "com.siskopsya.amm"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 10
-        versionName "1.0"
+        //versionCode 10
+        //versionName "1.0"
+        versionCode 11
+        versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
