--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,10 @@ android {
         targetSdkVersion 29
         //versionCode 10
         //versionName "1.0"
-        versionCode 11
-        versionName "1.1"
+        //versionCode 11
+        //versionName "1.1"
+        versionCode 12
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
